@@ -1,5 +1,15 @@
 2021-07-14  Mark Lam  <mark.lam@apple.com>
 
+        Check for out of memory in JSC::globalFuncEscape() and JSC::globalFuncUnescape().
+        https://bugs.webkit.org/show_bug.cgi?id=227962
+        rdar://78392251
+
+        Reviewed by Yusuke Suzuki.
+
+        * stress/out-of-memory-in-globalFuncUnescape.js: Added.
+
+2021-07-14  Mark Lam  <mark.lam@apple.com>
+
         Placate exception checker validation in operationObjectAssignUntyped.
         https://bugs.webkit.org/show_bug.cgi?id=227955
         rdar://80503746
